# z2h

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: ci.yml
configuration/: local.yaml
migrations/: 20240223175102_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
